@@ -1,3 +1,8 @@
+2015-09-25  Teresa Johnson  <tejohnson@google.com>
+
+	* opts.c (finish_options): Unset -freorder-blocks-and-partition
+	if not using profile.
+
 2015-09-25  Manuel López-Ibáñez  <manu@gcc.gnu.org>
 
 	PR pretty-print/67567
